@@ -1,5 +1,8 @@
 2003-07-24  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* SkunkWeb/util/cache_reaper.py.in (walk_func): fix for missing
+	key file.
+
 	* docs/manual/instConfig.txt: fixed some indentation problems in
 	the rst source.
 
